# ATS_14

./: .gitignore  CMakeLists.txt
configs/: manifest.json
core/app/: main.cpp  module_loader.cpp
core/modules/ui_core/: ui_core.cpp
scripts/: git_update.sh  lin_release.sh
